# admin

./: README.md  cspell.json  pyproject.toml
.github/workflows/: pep.yml  pylint.yml  pytest.yml
src/admin/: __init__.py  organize_and_upload_receipts.py
tests/: test_organize_and_upload_receipts.py
